DialogController implemented